# ocr97

./: .gitignore  LICENSE  MANIFEST.in  README.md  constraints-ocr.txt  pyproject.toml  requirements-ocr.txt
.github/workflows/: ci.yml
benchmarks/: mixed_corpus_manifest.json  ocr97_3090_longform_examples.json  ocr97_3090_longform_queue.json  ocr97_97_grade_queue.json  ocr97_97_grade_queue_v2.json  ocr97_scanned_fallback_tonight_queue.json  ocr97_week_campaign_plan.json  queue.json  real_document_corpus.json  real_routing_manifest.json  release_97_gate_manifest.json  scanned_fallback_manifest.json  truth10_manifest.json
docs/: BENCHMARKS.md  GITHUB_PUBLICATION_NOTES.md  ROADMAP.md
examples/: doctor_payload_demo.py
src/ocr97/: __init__.py  baseline_compare.py  bootstrap.py  capability_audit.py  cli.py  diagnostics.py  dual_tool.py  engine_registry.py  field_evidence.py  field_ranker.py  gateway.py  hardware_escalation.py  hardware_proof_scheduler.py  hardware_proof_sequence.py  helix97.py  legacy_env.py  local_inference.py  mcp.py  mixed_corpus_benchmark.py  overnight_benchmark.py  paths.py  profiles.py  real_corpus.py  real_routing_benchmark.py  receipt_fields.py  release_corpus.py  release_grade.py  server.py  spark_3090_plan.py  sroie_runner.py  truth_benchmark.py  truth_runner.py  week_benchmark_campaign.py
tests/: test_3090_longform_plan.py  test_baseline_compare.py  test_content_feature_detection.py  test_engine_registry.py  test_field_evidence.py  test_field_ranker.py  test_gateway_lightweight_status.py  test_hardware_proof_sequence.py  test_helix97.py  test_lightweight_bootstrap.py  test_mixed_corpus_benchmark.py  test_package_smoke.py  test_postrun_improvements.py  test_real_corpus.py  test_real_routing_benchmark.py  test_release_97_gate.py  test_truth_benchmark.py  test_truth_runner.py  test_week_benchmark_campaign.py
tools/: ocr97_public_release_audit.py  stage_ocr97_public_repo.py
